restoring code to xamarin-form-integration branch

--- a/source/XamarinForms/Xamarin.Auth.XamarinForms.WindowsPhone8/Xamarin.Auth.XamarinForms.WindowsPhone8.csproj
+++ b/source/XamarinForms/Xamarin.Auth.XamarinForms.WindowsPhone8/Xamarin.Auth.XamarinForms.WindowsPhone8.csproj
@@ -84,8 +84,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="PageLoginRenderer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Auth.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="README_FIRST.txt" />
