--- a/source/XamarinForms/Xamarin.Auth.XamarinForms.WindowsStore81WinRT/Xamarin.Auth.XamarinForms.WindowsStore81WinRT.csproj
+++ b/source/XamarinForms/Xamarin.Auth.XamarinForms.WindowsStore81WinRT/Xamarin.Auth.XamarinForms.WindowsStore81WinRT.csproj
@@ -164,6 +164,6 @@
   </Target>
   -->
   <ItemGroup>
-    <Compile Include="PageLoginRenderer.cs" />
+    <Compile Include="Auth.cs" />
   </ItemGroup>
 </Project>
